2001-05-29  Radek Doulik  <rodo@ximian.com>

	* Makefile.am (EXTRA_DIST): remove gtkhtml-capplet.glade.h

2001-05-07  Larry Ewing  <lewing@ximian.com>

	* gtkhtml-capplet.glade: fix spelling of keyboard.

2001-04-01  Fatih Demir <kabalak@gtranslator.org>

	* .cvsignore: Added "gtkhtml-capplet.glade.h" to the
		ignores.

2001-02-19  Yukihiro Nakai  <nakai@gnome.gr.jp>

	* .desktop: Add Japanese trasnlation.
	* Fix Commento -> Comment

2001-01-26  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>

	* gtkhtml-properties.desktop: added Slovak translation

2001-01-24  Radek Doulik  <rodo@helixcode.com>

	* main.c: added xemacs bindings

2001-01-19  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>

	* gtkhtml-properties.desktop: added Slovak translation
	* gtkhtml-editor-properties.desktop: added Slovak translation

2001-01-11  Radek Doulik  <rodo@helixcode.com>

	* main.c: read/store full font name

2000-12-11  Radek Doulik  <rodo@helixcode.com>

	* Makefile.am: added gtkhtml-capplet.glade to EXTRA_DIST

2000-12-11  Jacob "Ulysses" Berkman  <jacob@helixcode.com>

	* main.c: merge with viewer.c, and gladify

	* Makefile.am: only build one capplet

2000-11-28  Radek Doulik  <rodo@helixcode.com>

	* viewer.c (main): updated for latest gconf

	* aplied patch from Chipzz@ULYSSIS.Org
	capitalize Entry in .desktop files

2000-11-26  Christopher R. Gabriel  <cgabriel@softwarelibero.org>
	
	* gtkhtml-properties.desktop: added italian translation

	* gtkhtml-editor-properties.desktop: Likewise

2000-11-04  Zbigniew Chyla  <cyba@gnome.pl>

	* gtkhtml-editor-properties.desktop.cyba,
	gtkhtml-properties.desktop.cyba: Added Polish translation.

2000-11-01  Radek Doulik  <rodo@helixcode.com>

	* gnome-bindings-prop.c (gnome_bindings_properties_save_keymap):
	save only non-empty bindings

2000-10-11  Radek Doulik  <rodo@helixcode.com>

	* Makefile.am (CFLAGS): don't add pspell cflags, they aren't
	needed anymore
	(LDADD): removed pspell libs
